Sun Jul 01 10:53:35 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Tue Jun 26 11:59:17 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Set link_all_deplibs_CXX=no on solaris, like we
	  already do for xapian-core.

Thu Jun 21 13:44:06 GMT 2012  Olly Betts <olly@survex.com>

	* xlsxparse.cc: Check for "uniquecount" parameter, not "unqiueCount" as
	  we normalise parameter names to lower case.

Thu Jun 21 13:42:35 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: unzip extracts files in the order they are in the
	  archive, not the order they are on the command line, so call unzip
	  twice when the order of extraction matters.

Tue Jun 19 00:58:04 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc,opendocparse.cc,opendocparse.h,xmlparse.cc:
	  Improve handling of headers and footers on OpenDocument documents.

Mon Jun 18 07:02:20 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Properly fix the "trim trailing formfeeds" code.

Mon Jun 18 06:16:39 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Tweak previous change.

Mon Jun 18 05:49:07 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix the "trim trailing formfeeds" code not to remove one
	  character too many.

Mon Jun 18 05:47:33 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc,xlsxparse.cc,xlsxparse.h: Rework .xlsx parsing to
	  substitute the shared strings into the positions they are used
	  in, so that the sample actually matches what appears in the
	  spreadsheet.

Mon Jun 18 04:49:12 GMT 2012  Olly Betts <olly@survex.com>

	* xlsxparse.cc,xlsxparse.h: Subclass XlsxParser directly from
	  HtmlParser.

Mon Jun 18 03:16:43 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc,xlsxparse.cc,xlsxparse.h: Index calculated
	  numbers from .xlsx files.

Wed Jun 13 04:53:02 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: pdftotext outputs a formfeed between each page, which